--- a/LoginRegister/build.gradle
+++ b/LoginRegister/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     implementation project(path: ':Home')
+    implementation 'androidx.core:core-ktx:+'
     //база данных Room для хранения информации о пользователе
     def room_version="2.5.0"
     implementation "androidx.room:room-runtime:$room_version"
