--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
     implementation project(path: ':LoginRegister')
+    implementation 'androidx.core:core-ktx:+'
     //база данных Room для хранения информации о пользователе
     def room_version="2.5.0"
     implementation "androidx.room:room-runtime:$room_version"
