--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
 
 dependencies {
     implementation project(path: ':LoginRegister')
-    implementation 'androidx.core:core-ktx:+'
+    implementation 'com.android.support:support-annotations:28.0.0'
+
     //база данных Room для хранения информации о пользователе
     def room_version="2.5.0"
     implementation "androidx.room:room-runtime:$room_version"
@@ -71,9 +72,20 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.activity:activity-ktx:1.6.1"
 
+
+
+    // Dagger
+    def daggerVer = 2.45 // or latest version
+
+    implementation "com.google.dagger:dagger:$daggerVer"
+    implementation "com.google.dagger:dagger-android-support:$daggerVer"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVer"
+    kapt "com.google.dagger:dagger-compiler:$daggerVer"
+
+
     //dagger-hilt
-    implementation "com.google.dagger:hilt-android:2.33-beta"
-    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt "com.google.dagger:hilt-android-compiler:2.45"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
