--- a/feature/home/src/main/AndroidManifest.xml
+++ b/feature/home/src/main/AndroidManifest.xml
@@ -3,9 +3,14 @@
 
     <application>
         <activity
-            android:name=".MainActivity"
+            android:name=".shared.SignInActivity"
             android:exported="false" />
         <activity android:name=".HomePage1" />
+
+        <activity
+            android:name=".shared.LoginActivity"
+            android:exported="false" />
+
 
     </application>
 
