--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -77,4 +77,7 @@ dependencies {
 
     //coil
     implementation("io.coil-kt:coil:1.1.1")
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
